# osparc-simcore-clients

./: .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  Makefile  NOTES.md  README.md  REALEASES.md  index.html  mkdocs.yml  noxfile.py  requirements-tests.txt  requirements-tools.txt  requirements.txt  setup.cfg  setup.py
api/: Makefile  config.json  openapi.json
clients/python/test/e2e/ci/e2e/: pyproject.toml
clients/python/test/e2e/ci/e2e/e2e/: _data_classes.py  _models.py  _utils.py  postprocess.py  preprocess.py
code_samples/: UsersApi.ipynb
docs/: README.md  UsersApi.md  doc_entrypoint.md  index.html
manual/: README.md
osparc/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
samples/: basic.py  test_basic.py
scripts/: common.Makefile  generate_version.bash  gh.bash  increment_version.bash  install_ci_osparc_python_client.bash  jq.bash  run_e2e_python_tests.bash  validate_semantic_version.py
test/: conftest.py  test_basic.py  test_body_upload_file_v0_files_content_put.py  test_body_upload_file_v0_files_upload_post.py  test_body_upload_multiple_files_v0_files_upload_multiple_post.py  test_body_upload_single_file_v0_files_upload_post.py  test_file.py  test_file_metadata.py  test_file_uploaded.py  test_files_api.py  test_groups.py  test_http_validation_error.py  test_job.py  test_job_input.py  test_job_inputs.py  test_job_output.py  test_job_outputs.py  test_job_state.py  test_job_status.py  test_jobs_api.py  test_meta.py  test_meta_api.py  test_profile.py  test_profile_update.py  test_solver.py  test_solver_output.py  (+7 more)
(+280 files in other folders)
